<resources>
    <string name="app_name">CarritoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="txt_cart">Comprar</string>
    <string name="txt_Total">Total</string>
    <string name="txt_Subtotal">Subtotal</string>
    <string name="txt_IVA">IVA</string>
    <string name="btn_Pagar">Pagar</string>

    <string name="txt_lista_compras">Lista de Compras</string>

    <string name="txt_usuario">Cedula</string>
    <string name="txt_contrseña">Contraseña</string>
    <string name="txt_ingresar">Iniciar Sesión</string>
    <string name="txt_registrarse">Registrar</string>

    <string name="txt_cedula">Cedula</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_direccion">Direccion</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="btn_Iniar_Sescion">Iniciar Sesión</string>

    <string name="txt_Factura">Factura N°</string>
    <string name="txt_Fecha">Fecha :</string>

    <string name="txt_UTA">Universidad Tecnica Ambato</string>
    <string name="txt_Cliente">Cliente</string>


</resources>